Update title in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>짱 라오쉬 수행 연습 (Ultimate)</title>
+    <title>짱 라오쉬 수행 연습</title>
     <style>
         /* [디자인] 기본 설정 */
         html { overflow-y: scroll; }
