--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>짱 라오쉬 수행 연습</title>
+    <title>짱 라오쉬 수행 연습 (Ultimate)</title>
     <style>
         /* [디자인] 기본 설정 */
         html { overflow-y: scroll; }
@@ -17,6 +17,8 @@
         .control-panel { border-bottom: 2px solid #eee; padding-bottom: 20px; margin-bottom: 20px; }
         .mode-select-area { margin-bottom: 15px; }
         select { padding: 8px; font-size: 15px; border-radius: 8px; border: 2px solid #007bff; color: #333; font-weight: bold; cursor: pointer; outline: none; width: 100%; max-width: 300px; }
+        /* 옵션 색상 구분 */
+        option.basic-option { background-color: #e3f2fd; color: #1565c0; font-weight: bold; }
         option.advanced-option { background-color: #e8f5e9; color: #2e7d32; font-weight: bold; }
 
         /* 배지 스타일 */
@@ -47,17 +49,16 @@
             100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(211, 47, 47, 0); }
         }
 
-        /* [워터마크 수정됨] - 폭죽 이스터에그용 설정 */
+        /* [워터마크 수정됨] - 최고 관리자님 설정 반영 */
         .watermark {
             position: fixed;
             bottom: 15px;
             right: 20px;
             font-size: 14px;
             color: #888;
-            /* 귀여운 손글씨 느낌 폰트 우선 적용 */
             font-family: 'Segoe Print', 'Chalkboard SE', 'Comic Sans MS', sans-serif;
-            opacity: 0.9; /* 투명도 증가 (더 진하게) */
-            cursor: pointer; /* 클릭 가능 표시 */
+            opacity: 0.9; 
+            cursor: pointer; 
             z-index: 9999;
             user-select: none;
             transition: opacity 0.3s, transform 0.2s;
@@ -128,7 +129,8 @@
         <div class="control-panel">
             <div class="mode-select-area">
                 <select id="chapterSelect" onchange="resetAndNext()">
-                    <option value="0">🔀 전체 랜덤 (기본)</option>
+                    <option value="0">🔀 전체 랜덤 (기본+응용)</option>
+                    <option value="6" class="basic-option">📚 기본 모드 (응용 제외)</option>
                     <option value="5" class="advanced-option">🧪 응용 모드 (변형 문제만)</option>
                     <option disabled>──────────</option>
                     <option value="1">1️⃣ 본문 1 (이름/국적)</option>
@@ -165,13 +167,11 @@
 
     <script>
         // ==========================================
-        // [0] 이스터에그: 폭죽 효과 (Simple Fireworks)
+        // [0] 이스터에그: 폭죽 효과
         // ==========================================
         function triggerFireworks(e) {
             const colors = ['#ff0000', '#00ff00', '#0000ff', '#ffff00', '#ff00ff', '#00ffff', '#ffa500'];
             const particleCount = 30;
-            
-            // 클릭 위치 (모바일/PC 대응)
             const x = e.clientX;
             const y = e.clientY;
 
@@ -180,26 +180,23 @@
                 particle.classList.add('firework-particle');
                 document.body.appendChild(particle);
 
-                // 랜덤 색상 및 초기 위치
                 const color = colors[Math.floor(Math.random() * colors.length)];
                 particle.style.backgroundColor = color;
                 particle.style.left = x + 'px';
                 particle.style.top = y + 'px';
 
-                // 랜덤 방향으로 퍼지기
                 const angle = Math.random() * Math.PI * 2;
-                const velocity = 50 + Math.random() * 100; // 퍼지는 거리
+                const velocity = 50 + Math.random() * 100; 
                 const tx = Math.cos(angle) * velocity;
                 const ty = Math.sin(angle) * velocity;
 
-                // 애니메이션 (Web Animations API)
                 particle.animate([
                     { transform: 'translate(0, 0) scale(1)', opacity: 1 },
                     { transform: `translate(${tx}px, ${ty}px) scale(0)`, opacity: 0 }
                 ], {
                     duration: 800 + Math.random() * 400,
                     easing: 'cubic-bezier(0, .9, .57, 1)'
-                }).onfinish = () => particle.remove(); // 끝나면 삭제
+                }).onfinish = () => particle.remove(); 
             }
         }
 
@@ -433,6 +430,9 @@
             
             if (mode == "0") {
                 currentPool = quizDb;
+            } else if (mode == "6") {
+                // [NEW] 기본 모드 (isVar === false)
+                currentPool = quizDb.filter(item => item.isVar === false);
             } else if (mode == "5") {
                 currentPool = quizDb.filter(item => item.isVar === true);
             } else {
@@ -578,7 +578,6 @@
                 html += `</div></details>`;
             });
 
-            // [업데이트] 참고 박스에 'ü 입력법'과 '학년 줄임말' 설명 추가
             html += `
             <div class="ref-box">
                 <h4>💡 중요 체크 포인트 (참고)</h4>
