Fix typo in Chinese phrase for consistency
Signed-off-by: yyyyynny <jhun0557@gmail.com>

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             { ch: 3, w: 1, isVar: false, hanzi: "她是谁?", answer: "Ta1 shi4 she2i?", meaning: "그녀는 누구니?" },
             { ch: 3, w: 1, isVar: false, hanzi: "她是我妹妹。", answer: "Ta1 shi4 wo3 me4imei.", meaning: "그녀는 나의 여동생이다." },
             { ch: 3, w: 1, isVar: true, hanzi: "他是谁?", answer: "Ta1 shi4 she2i?", meaning: "그는 누구니? (응용)" },
-            { ch: 3, w: 1, isVar: false, hanzi: "她很像你!", answer: "Ta1 hen3 xia4ng ni3!", meaning: "그녀는 너를 매우 닮았다!" },
+            { ch: 3, w: 1, isVar: false, hanzi: "她很像你!", answer: "Ta1 he3n xia4ng ni3!", meaning: "그녀는 너를 매우 닮았다!" },
             { ch: 3, w: 1, isVar: false, hanzi: "她几岁?", answer: "Ta1 ji3 sui4?", meaning: "그녀는 몇 살이니?" },
             { ch: 3, w: 1, isVar: false, hanzi: "今年八岁。", answer: "Ji1nnia2n ba1 sui4.", meaning: "올해 8살이다." },
             
